outline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-ingress
  namespace: outline
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - docs.prayujt.com
    secretName: docs-prayujt-certs
  rules:
  - host: docs.prayujt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: outline
            port:
              number: 3000
